fixed footer alignment issue

--- a/style.css
+++ b/style.css
@@ -212,6 +212,7 @@ overflow:visible;
   text-align: center;
   font-size: 3.7vw;
 margin: -0.001vw 0;
+width:100%;
 }
 
 
